clusters/production/apps/pgadmin/pgadmin.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgadmin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/storage
                    operator: In
                    values:
                      - "true"
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
              subPath: pgadmin
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data-nfs

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: default
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "cloudflare-letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - pgadmin.ndlovucloud.co.zw
      secretName: pgadmin-prod-cert-tls-secret
    
  rules:
    - host: pgadmin.ndlovucloud.co.zw
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
